configured links for pages

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -3,10 +3,10 @@
       <div class="footer__body">
          <ul class="footer__list">
             <li class="footer__item">
-               <a data-text="ФОТО" href="#" class="footer__link">ФОТО</a>
+               <a data-text="ФОТО" href="/src/html/pages/photos/" class="footer__link">ФОТО</a>
             </li>
             <li class="footer__item">
-               <a data-text="АНОНСЫ" href="#" class="footer__link">АНОНСЫ</a>
+               <a data-text="АНОНСЫ" href="/src/html/pages/anonces/" class="footer__link">АНОНСЫ</a>
             </li>
             <li class="footer__item">
                <a data-text="ЗАВЕДЕНИЯ" href="#" class="footer__link">ЗАВЕДЕНИЯ</a>
