--- a/src/html/header.html
+++ b/src/html/header.html
@@ -2,17 +2,17 @@
    <div class="header__top top-header">
       <div class="top-header__container">
          <div class="top-header__wrapper">
-            <a href="/index.html" class="top-header__logo">
+            <a href="/" class="top-header__logo">
                <img src="/img/header/logo.jpeg" alt="logo" />
             </a>
             <nav class="top-header__menu menu">
                <div class="menu__body">
                   <ul class="menu__list">
                      <li class="menu__item">
-                        <a data-text="фото" href="/src/html/pages/photos/index.html" class="menu__link">фото</a>
+                        <a data-text="фото" href="/src/html/pages/photos/" class="menu__link">фото</a>
                      </li>
                      <li class="menu__item">
-                        <a data-text="анонсы" href="/src/html/pages/anonces/index.html" class="menu__link">анонсы</a>
+                        <a data-text="анонсы" href="/src/html/pages/anonces/" class="menu__link">анонсы</a>
                      </li>
                      <li class="menu__item">
                         <a data-text="заведения" href="#" class="menu__link">заведения</a>
