Translated to English

--- a/src/html/blocks/photo-portal.html
+++ b/src/html/blocks/photo-portal.html
@@ -77,7 +77,7 @@
       </div>
       <div class="photo-portal__button">
          <a href="/src/html/pages/photos/index.html" class="button button--white">
-            <span>see all works</span>
+            <span data-tr data-works>посмотреть все фотографии</span>
             <svg>
                <use xlink:href="#arrow" />
             </svg>
