--- a/src/html/blocks/photo-report.html
+++ b/src/html/blocks/photo-report.html
@@ -2,7 +2,7 @@
    <div class="photo-report__container">
       <div class="photo-report__wrapper">
          <div class="photo-report__body">
-            <h2 class="photo-report__title">заказать фотоотчет</h2>
+            <h2 data-tr data-photo-report-title class="photo-report__title">заказать фотоотчет</h2>
             <div class="photo-report__image">
                <img class="photo-report__image__img" src="img/photo-report/01.jpg" alt="image" loading="lazy" />
                <img class="photo-report__image__img__second" src="img/photo-report/01.2.jpeg" alt="">
@@ -12,31 +12,35 @@
             <div class="content-photo-report__body">
                <ul class="content-photo-report__list">
                   <li class="content-photo-report__item">
-                     <span>номер телефона 
+                     <span>
+                        <span data-tr data-phone-number>номер телефона</span> 
                         <svg><use xlink:href="#arrow-nav" /></svg>
                      </span>
                      <a href="tel:87777777777" class="content-photo-report__link">8777 777 7777</a>
                   </li>
                   <li class="content-photo-report__item">
-                     <span>ЧЕРЕЗ WHAT’S APP 
+                     <span>
+                        <span data-tr data-whatsapp>ЧЕРЕЗ WHAT’S APP</span> 
                         <svg><use xlink:href="#arrow-nav" /></svg>
                      </span>
                      <a href="tel:87777777777" class="content-photo-report__link">8777 777 7777</a>
                   </li>
                   <li class="content-photo-report__item">
-                     <span>НАШ E-MAIL 
+                     <span>
+                        <span data-tr data-email>НАШ E-MAIL</span> 
                         <svg><use xlink:href="#arrow-nav" /></svg>
                      </span>
                      <a href="tel:87777777777" class="content-photo-report__link">8777 777 7777</a>
                   </li>
                   <li class="content-photo-report__item">
-                     <span>НАШ INSTAGRAM 
+                     <span>
+                        <span data-tr data-instagram>НАШ INSTAGRAM</span> 
                         <svg><use xlink:href="#arrow-nav" /></svg>
                      </span>
                      <a href="tel:87777777777" class="content-photo-report__link">8777 777 7777</a>
                   </li>
                </ul>
-               <a href="#" class="content-photo-report__button button">info<svg><use xlink:href="#arrow" /></svg></a>
+               <a href="#" class="content-photo-report__button button"><span data-info>инфо</span><svg><use xlink:href="#arrow" /></svg></a>
                <div class="content-photo-report__image">
                   <img src="img/photo-report/02.jpg" alt="image">
                </div>
