--- a/src/html/blocks/vacancy.html
+++ b/src/html/blocks/vacancy.html
@@ -1,8 +1,8 @@
 <section class="vacancy">
    <div class="vacancy__container">
       <div class="vacancy__body">
-         <h2 class="vacancy__title">ХОТИТЕ УСТРОИТСЯ К НАМ НА РАБОТУ</h2>
-         <a href="/src/html/pages/vacancies/" class="vacancy__button button">ВАКАНСИИ <svg><use xlink:href="#arrow" /></svg> </a>
+         <h2 data-tr data-vacancy-title class="vacancy__title">ХОТИТЕ УСТРОИТСЯ К НАМ НА РАБОТУ</h2>
+         <a href="/src/html/pages/vacancies/" class="vacancy__button button"><span data-tr data-vacancy-btn>ВАКАНСИИ</span> <svg><use xlink:href="#arrow" /></svg> </a>
       </div>
    </div>
 </section>
