--- a/src/html/pages/photos/index.html
+++ b/src/html/pages/photos/index.html
@@ -8,7 +8,7 @@
    </head>
    <body>
       <div class="wrapper">
-         <load src="src/html/header.html" />
+         <load src="/src/html/header.html" />
          <main class="main">
             <section class="photo-portal photo-portal--1">
                <div class="photo-portal__container">
@@ -202,32 +202,33 @@
                   <div class="photo-report__space">
                      <div class="photo-report__wrapper">
                         <div class="photo-report__body">
-                           <h2 class="photo-report__title">заказать фотоотчет</h2>
-                           <a href="#" class="photo-report__button button">info<svg><use xlink:href="#arrow" /></svg></a>
+                           <h2 data-tr data-photo-report-title class="photo-report__title">заказать фотоотчет</h2>
+                           <a href="#" class="photo-report__button button"><span data-info>инфо</span><svg><use xlink:href="#arrow" /></svg></a>
                         </div>
                         <div class="photo-report__content content-photo-report">
                            <div class="content-photo-report__body">
                               <ul class="content-photo-report__list">
                                  <li class="content-photo-report__item">
-                                    <span>номер телефона 
+                                    <span>
+                                       <span data-tr data-phone-number>номер телефона </span>
                                        <svg><use xlink:href="#arrow-nav" /></svg>
                                     </span>
                                     <a href="tel:87777777777" class="content-photo-report__link">8777 777 7777</a>
                                  </li>
                                  <li class="content-photo-report__item">
-                                    <span>ЧЕРЕЗ WHAT’S APP 
+                                    <span><span data-tr data-whatsapp>ЧЕРЕЗ WHAT’S APP</span> 
                                        <svg><use xlink:href="#arrow-nav" /></svg>
                                     </span>
                                     <a href="tel:87777777777" class="content-photo-report__link">8777 777 7777</a>
                                  </li>
                                  <li class="content-photo-report__item">
-                                    <span>НАШ E-MAIL 
+                                    <span><span data-tr data-email>НАШ E-MAIL</span> 
                                        <svg><use xlink:href="#arrow-nav" /></svg>
                                     </span>
                                     <a href="tel:87777777777" class="content-photo-report__link">8777 777 7777</a>
                                  </li>
                                  <li class="content-photo-report__item">
-                                    <span>НАШ INSTAGRAM 
+                                    <span><span data-tr data-instagram>НАШ INSTAGRAM</span> 
                                        <svg><use xlink:href="#arrow-nav" /></svg>
                                     </span>
                                     <a href="tel:87777777777" class="content-photo-report__link">8777 777 7777</a>
