--- a/src/html/pages/anonces/index.html
+++ b/src/html/pages/anonces/index.html
@@ -19,11 +19,11 @@
             </div>
             <div class="anonces__text-block">
                 <div class="anonces__text-content">
-                    <p>Headliner вечера <br> лучший ди-джей Франции, на счету <br> которого две полноформатные пластинки, собственная вечеринка в <br> Париже и радиошоу - DAVID VENDETTA</p>
-                    <p>15 августа <br> в @6/45 <br>
+                    <p data-tr data-headliner-1>Headliner вечера <br> лучший ди-джей Франции, на счету <br> которого две полноформатные пластинки, собственная вечеринка в <br> Париже и радиошоу - DAVID VENDETTA</p>
+                    <p data-tr data-date-1>15 августа <br> в @6/45 <br>
                         Сбор гостей – 23:00</p>
-                    <p>Достык 123 <br>
-                        Reserve: 8-123-123-1234</p>
+                    <p data-tr data-address>Достык 123 <br>
+                        Забронировать: 8-123-123-1234</p>
                 </div>
             </div>
         </div>
@@ -31,11 +31,11 @@
         <div class="anonces__row">
             <div class="anonces__text-block anonces__text-block__second">
                 <div class="anonces__text-content">
-                    <p>Headliner вечера <br> лучший ди-джей Франции, на счету <br> которого две полноформатные пластинки, собственная вечеринка в <br> Париже и радиошоу - DAVID VENDETTA</p>
-                    <p>15 августа <br> в @6/45 <br>
+                    <p data-tr data-headliner-2>Headliner вечера <br> лучший ди-джей Франции, на счету <br> которого две полноформатные пластинки, собственная вечеринка в <br> Париже и радиошоу - DAVID VENDETTA</p>
+                    <p data-tr data-date-2>15 августа <br> в @6/45 <br>
                         Сбор гостей – 23:00</p>
-                    <p>Достык 123 <br>
-                        Reserve: 8-123-123-1234</p>
+                    <p data-tr data-address>Достык 123 <br>
+                        Забронировать: 8-123-123-1234</p>
                 </div>
             </div>
             <div class="anonces__block">
@@ -49,11 +49,11 @@
             </div>
             <div class="anonces__text-block">
                 <div class="anonces__text-content">
-                    <p>Headliner вечера <br> лучший ди-джей Франции, на счету <br> которого две полноформатные пластинки, собственная вечеринка в <br> Париже и радиошоу - DAVID VENDETTA</p>
-                    <p>15 августа <br> в @6/45 <br>
+                    <p data-tr data-headliner-3>Headliner вечера <br> лучший ди-джей Франции, на счету <br> которого две полноформатные пластинки, собственная вечеринка в <br> Париже и радиошоу - DAVID VENDETTA</p>
+                    <p data-tr data-date-3>15 августа <br> в @6/45 <br>
                         Сбор гостей – 23:00</p>
-                    <p>Достык 123 <br>
-                        Reserve: 8-123-123-1234</p>
+                    <p data-tr data-address>Достык 123 <br>
+                        Забронировать: 8-123-123-1234</p>
                 </div>
             </div>
         </div>
@@ -61,11 +61,11 @@
         <div class="anonces__row">
             <div class="anonces__text-block anonces__text-block__second">
                 <div class="anonces__text-content">
-                    <p>Headliner вечера <br> лучший ди-джей Франции, на счету <br> которого две полноформатные пластинки, собственная вечеринка в <br> Париже и радиошоу - DAVID VENDETTA</p>
-                    <p>15 августа <br> в @6/45 <br>
+                    <p data-tr data-headliner-4>Headliner вечера <br> лучший ди-джей Франции, на счету <br> которого две полноформатные пластинки, собственная вечеринка в <br> Париже и радиошоу - DAVID VENDETTA</p>
+                    <p data-tr data-date-4>15 августа <br> в @6/45 <br>
                         Сбор гостей – 23:00</p>
-                    <p>Достык 123 <br>
-                        Reserve: 8-123-123-1234</p>
+                    <p data-tr data-address>Достык 123 <br>
+                        Забронировать: 8-123-123-1234</p>
                 </div>
             </div>
             <div class="anonces__block">
@@ -79,11 +79,11 @@
             </div>
             <div class="anonces__text-block">
                 <div class="anonces__text-content">
-                    <p>Headliner вечера <br> лучший ди-джей Франции, на счету <br> которого две полноформатные пластинки, собственная вечеринка в <br> Париже и радиошоу - DAVID VENDETTA</p>
-                    <p>15 августа <br> в @6/45 <br>
+                    <p data-tr data-headliner-5>Headliner вечера <br> лучший ди-джей Франции, на счету <br> которого две полноформатные пластинки, собственная вечеринка в <br> Париже и радиошоу - DAVID VENDETTA</p>
+                    <p data-tr data-date-5>15 августа <br> в @6/45 <br>
                         Сбор гостей – 23:00</p>
-                    <p>Достык 123 <br>
-                        Reserve: 8-123-123-1234</p>
+                    <p data-tr data-address>Достык 123 <br>
+                        Забронировать: 8-123-123-1234</p>
                 </div>
             </div>
         </div>
@@ -91,11 +91,11 @@
         <div class="anonces__row">
             <div class="anonces__text-block anonces__text-block__second">
                 <div class="anonces__text-content">
-                    <p>Headliner вечера <br> лучший ди-джей Франции, на счету <br> которого две полноформатные пластинки, собственная вечеринка в <br> Париже и радиошоу - DAVID VENDETTA</p>
-                    <p>15 августа <br> в @6/45 <br>
+                    <p data-tr data-headliner-6>Headliner вечера <br> лучший ди-джей Франции, на счету <br> которого две полноформатные пластинки, собственная вечеринка в <br> Париже и радиошоу - DAVID VENDETTA</p>
+                    <p data-tr data-date-6>15 августа <br> в @6/45 <br>
                         Сбор гостей – 23:00</p>
-                    <p>Достык 123 <br>
-                        Reserve: 8-123-123-1234</p>
+                    <p data-tr data-address>Достык 123 <br>
+                        Забронировать: 8-123-123-1234</p>
                 </div>
             </div>
             <div class="anonces__block">
