--- a/src/html/pages/vacancies/index.html
+++ b/src/html/pages/vacancies/index.html
@@ -13,20 +13,20 @@
             <section class="vacancies">
                <div class="vacancies__container">
                   <div class="vacancies__item-button">
-                     <a href="#" class="vacancies__button button">вакансии <svg><use xlink:href="#arrow" /></svg> </a>
+                     <a href="#" class="vacancies__button button"><span data-vacancy-btn>вакансии</span> <svg><use xlink:href="#arrow" /></svg> </a>
                   </div>
-                  <div class="vacancies__text">
+                  <div data-vacancies-text class="vacancies__text">
                      Резюме и Ваше Портфолио просим отправлять на нашу электронную почту:
                   </div>
                   <div class="vacancies__items">
                      <div class="vacancies__item">
-                        <div class="vacancies__label">Требуется SMM менеджер!</div>
+                        <div data-vacancy-1 class="vacancies__label">Требуется SMM менеджер!</div>
                      </div>
                      <div class="vacancies__item">
-                        <div class="vacancies__label">Требуется SMM менеджер!</div>
+                        <div data-vacancy-2 class="vacancies__label">Требуется SMM менеджер!</div>
                      </div>
                      <div class="vacancies__item">
-                        <div class="vacancies__label">Требуется SMM менеджер!</div>
+                        <div data-vacancy-3 class="vacancies__label">Требуется SMM менеджер!</div>
                      </div>
                   </div>
                </div>
