--- a/src/html/header.html
+++ b/src/html/header.html
@@ -28,7 +28,14 @@
                            </svg>
                         </button>
                      </li>
- 
+                     <li class="menu__item menu__parameters">
+                        <a href="№" id="menu-mode__light" onclick="changeToLight(event)">
+                           <img src="/public/img/header/light-mode.svg" alt="" class="menu-mode__bottom-header__color-mode__light">
+                        </a>
+                        <a href="№" id="menu-mode__dark" onclick="changeToDark(event)">
+                           <img src="/public/img/header/dark-mode.svg" alt="" class="menu-mode__bottom-header__color-mode__dark">
+                        </a>
+                     </li>
                   </ul>
                </div>
             </nav>
