Translated to Kazakh

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -33,8 +33,8 @@
                </div>
             </nav>
             <div class="top-header__actions">
-               <button data-lang type="button" class="top-header__language language-second">
-                  <span>english</span>
+               <button type="button" class="top-header__language language-second">
+                  <span data-lang>english</span>
                   <svg>
                      <use xlink:href="#arrow" />
                   </svg>
