Add mobile translation

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -22,7 +22,7 @@
                      </li>
                      <li class="menu__item menu__parameters">
                         <button type="button" class="menu-item top-header__language">
-                           <span>русский</span>
+                           <span data-lang>english</span>
                            <svg>
                               <use xlink:href="#arrow" />
                            </svg>
