--- a/src/html/pages/anonces/index.html
+++ b/src/html/pages/anonces/index.html
@@ -19,7 +19,7 @@
                            <div class="item-anonces-section__image">
                               <img src="/img/anonces/1.jpg" alt="Image" />
                            </div>
-                           <div class="item-anonces-section__item-date"><span>15</span> <br />августа</div>
+                           <div data-datetime-1 class="item-anonces-section__item-date"><span>15</span> <br />августа</div>
                            <div class="item-anonces-section__item-name">
                               BRUCE WAYNE <br />
                               PARTY
@@ -67,7 +67,7 @@
                            <div class="item-anonces-section__image">
                               <img src="/img/anonces/2.jpg" alt="Image" />
                            </div>
-                           <div class="item-anonces-section__item-date"><span>15</span> <br />августа</div>
+                           <div data-datetime-2 class="item-anonces-section__item-date"><span>15</span> <br />августа</div>
                            <div class="item-anonces-section__item-name">
                               BRUCE WAYNE <br />
                               PARTY
@@ -79,7 +79,7 @@
                            <div class="item-anonces-section__image">
                               <img src="/img/anonces/1.jpg" alt="Image" />
                            </div>
-                           <div class="item-anonces-section__item-date"><span>15</span> <br />августа</div>
+                           <div data-datetime-3 class="item-anonces-section__item-date"><span>15</span> <br />августа</div>
                            <div class="item-anonces-section__item-name">
                               BRUCE WAYNE <br />
                               PARTY
@@ -127,7 +127,7 @@
                            <div class="item-anonces-section__image">
                               <img src="/img/anonces/2.jpg" alt="Image" />
                            </div>
-                           <div class="item-anonces-section__item-date"><span>15</span> <br />августа</div>
+                           <div data-datetime-4 class="item-anonces-section__item-date"><span>15</span> <br />августа</div>
                            <div class="item-anonces-section__item-name">
                               BRUCE WAYNE <br />
                               PARTY
@@ -139,7 +139,7 @@
                            <div class="item-anonces-section__image">
                               <img src="/img/anonces/1.jpg" alt="Image" />
                            </div>
-                           <div class="item-anonces-section__item-date"><span>15</span> <br />августа</div>
+                           <div data-datetime-5 class="item-anonces-section__item-date"><span>15</span> <br />августа</div>
                            <div class="item-anonces-section__item-name">
                               BRUCE WAYNE <br />
                               PARTY
@@ -187,7 +187,7 @@
                            <div class="item-anonces-section__image">
                               <img src="/img/anonces/2.jpg" alt="Image" />
                            </div>
-                           <div class="item-anonces-section__item-date"><span>15</span> <br />августа</div>
+                           <div data-datetime-6 class="item-anonces-section__item-date"><span>15</span> <br />августа</div>
                            <div class="item-anonces-section__item-name">
                               BRUCE WAYNE <br />
                               PARTY
