update links photos

--- a/src/html/blocks/hero.html
+++ b/src/html/blocks/hero.html
@@ -72,37 +72,50 @@
          <!-- Слайд -->
          <div class="thumbs-hero__slide slide-thumbs-hero swiper-slide">
             <div class="slide-thumbs-hero__image">
-               <img src="/img/hero/thumbs-img/01.jpeg" alt="thumb image" />
+               <a href="/src/html/pages/anonces/index.html">
+                  <img src="/img/hero/thumbs-img/01.jpeg" alt="thumb image" />
+               </a>
             </div>
          </div>
          <!-- Слайд -->
          <div class="thumbs-hero__slide slide-thumbs-hero swiper-slide">
             <div class="slide-thumbs-hero__image">
-               <img src="/img/hero/thumbs-img/02.jpeg" alt="thumb image" />
+               <a href="/src/html/pages/anonces/index.html">
+                  <img src="/img/hero/thumbs-img/02.jpeg" alt="thumb image" />
+               </a>
+            </div>
+         </div>
+         <!-- Слайд -->
+         <div class="thumbs-hero__slide slide-thumbs-hero swiper-slide">
+
+            <div class="slide-thumbs-hero__image">
+               <a href="/src/html/pages/anonces/index.html">
+                  <img src="/img/hero/thumbs-img/03.jpeg" alt="thumb image" />
+               </a>
             </div>
          </div>
          <!-- Слайд -->
          <div class="thumbs-hero__slide slide-thumbs-hero swiper-slide">
             <div class="slide-thumbs-hero__image">
-               <img src="/img/hero/thumbs-img/03.jpeg" alt="thumb image" />
+               <a href="/src/html/pages/anonces/index.html">
+                  <img src="/img/hero/thumbs-img/04.jpeg" alt="thumb image" />
+               </a>
             </div>
          </div>
          <!-- Слайд -->
          <div class="thumbs-hero__slide slide-thumbs-hero swiper-slide">
             <div class="slide-thumbs-hero__image">
-               <img src="/img/hero/thumbs-img/04.jpeg" alt="thumb image" />
+               <a href="/src/html/pages/anonces/index.html">
+                  <img src="/img/hero/thumbs-img/05.jpeg" alt="thumb image" />
+               </a>
             </div>
          </div>
          <!-- Слайд -->
          <div class="thumbs-hero__slide slide-thumbs-hero swiper-slide">
             <div class="slide-thumbs-hero__image">
-               <img src="/img/hero/thumbs-img/05.jpeg" alt="thumb image" />
-            </div>
-         </div>
-         <!-- Слайд -->
-         <div class="thumbs-hero__slide slide-thumbs-hero swiper-slide">
-            <div class="slide-thumbs-hero__image">
-               <img src="/img/hero/thumbs-img/06.jpg" alt="thumb image" />
+               <a href="/src/html/pages/anonces/index.html">
+                  <img src="/img/hero/thumbs-img/06.jpg" alt="thumb image" />
+               </a>
             </div>
          </div>
       </div>
