--- a/src/html/blocks/photo-portal.html
+++ b/src/html/blocks/photo-portal.html
@@ -1,25 +1,23 @@
 <section class="photo-portal">
    <div class="photo-portal__container">
       <div class="photo-portal__title">
-         <h2>BLA BLA BAR <br>
-            <span style="color: #fff;">03/08/2024</span>
-         </h2>
+         <h2 style="line-height: 133%; height: clamp(2.1875rem, 7vw, 3.75rem);"><a href="/src/html/pages/photos/">PHOTO PORTAL</a></h2>
       </div>
       <div class="photo-portal__items">
          <article class="photo-portal__item item-photo-portal">
-            <a href="#" class="item-photo-portal__image">
+            <a href="/src/html/pages/photos/" class="item-photo-portal__image">
                <img src="img/photo-portal/01.jpeg" alt="downtown-dubai-at-dawn-united-arab-emirates" loading="lazy" />
             </a>
             <h3 class="item-photo-portal__title"><a href="#">downtown-dubai-at-dawn-united-arab-emirates</a></h3>
          </article>
          <article class="photo-portal__item item-photo-portal">
-            <a href="#" class="item-photo-portal__image item-photo-portal__image--big">
+            <a href="/src/html/pages/photos/" class="item-photo-portal__image item-photo-portal__image--big">
                <img src="img/photo-portal/02.jpeg" alt="downtown-dubai-at-dawn-united-arab-emirates" loading="lazy" />
             </a>
             <h3 class="item-photo-portal__title"><a href="#">roe-deer-portrait-in-the-winter-forest</a></h3>
          </article>
          <article class="photo-portal__item item-photo-portal">
-            <a href="#" class="item-photo-portal__image">
+            <a href="/src/html/pages/photos/" class="item-photo-portal__image">
                <img src="img/photo-portal/03.jpeg" alt="downtown-dubai-at-dawn-united-arab-emirates" loading="lazy" />
             </a>
             <h3 class="item-photo-portal__title">
@@ -27,13 +25,13 @@
             </h3>
          </article>
          <article class="photo-portal__item item-photo-portal item-photo-portal--raised">
-            <a href="#" class="item-photo-portal__image">
+            <a href="/src/html/pages/photos/" class="item-photo-portal__image">
                <img src="img/photo-portal/04.jpeg" alt="greenland-natura-landscape" loading="lazy" />
             </a>
             <h3 class="item-photo-portal__title"><a href="#">greenland-natura-landscape</a></h3>
          </article>
          <article class="photo-portal__item item-photo-portal">
-            <a href="#" class="item-photo-portal__image item-photo-portal__image--big">
+            <a href="/src/html/pages/photos/" class="item-photo-portal__image item-photo-portal__image--big">
                <img
                   src="img/photo-portal/05.jpeg"
                   alt="lit-up-dome-tent-aurora-borealis-in-background"
@@ -43,7 +41,7 @@
             <h3 class="item-photo-portal__title"><a href="#">lit-up-dome-tent-aurora-borealis-in-background</a></h3>
          </article>
          <article class="photo-portal__item item-photo-portal item-photo-portal--raised">
-            <a href="#" class="item-photo-portal__image">
+            <a href="/src/html/pages/photos/" class="item-photo-portal__image">
                <img src="img/photo-portal/06.jpeg" alt="a-little-orange-bug-on-a-flower" loading="lazy" />
             </a>
             <h3 class="item-photo-portal__title">
@@ -51,19 +49,19 @@
             </h3>
          </article>
          <article class="photo-portal__item item-photo-portal item-photo-portal--raised">
-            <a href="#" class="item-photo-portal__image">
+            <a href="/src/html/pages/photos/" class="item-photo-portal__image">
                <img src="img/photo-portal/07.jpeg" alt="baby-birds" loading="lazy" />
             </a>
             <h3 class="item-photo-portal__title"><a href="#">baby-birds</a></h3>
          </article>
          <article class="photo-portal__item item-photo-portal">
-            <a href="#" class="item-photo-portal__image item-photo-portal__image--big">
+            <a href="/src/html/pages/photos/" class="item-photo-portal__image item-photo-portal__image--big">
                <img src="img/photo-portal/08.jpeg" alt="a-side-profile-of-a-leopard-s-head" loading="lazy" />
             </a>
             <h3 class="item-photo-portal__title"><a href="#">a-side-profile-of-a-leopard-s-head</a></h3>
          </article>
          <article class="photo-portal__item item-photo-portal item-photo-portal--raised">
-            <a href="#" class="item-photo-portal__image">
+            <a href="/src/html/pages/photos/" class="item-photo-portal__image">
                <img
                   src="img/photo-portal/09.jpeg"
                   alt="top-aerial-view-of-famous-snake-road-near-passo"
