update header logo

--- a/src/html/blocks/photo-portal.html
+++ b/src/html/blocks/photo-portal.html
@@ -1,7 +1,8 @@
 <section class="photo-portal">
    <div class="photo-portal__container">
       <div class="photo-portal__title">
-         <h2 style="line-height: 133%; height: clamp(2.1875rem, 7vw, 3.75rem);"><a href="/src/html/pages/photos/">PHOTO PORTAL</a></h2>
+         <h2 style="    height: clamp(1.8rem, 5vw, 3.575rem);
+    width: clamp(7.5rem, 24vw, 15.125rem);"><a href="/src/html/pages/photos/">PHOTO PORTAL</a></h2>
       </div>
       <div class="photo-portal__items">
          <article class="photo-portal__item item-photo-portal">
